// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketingBadge should render DESTOCK 1`] = `
<Component
  promotion={
    Object {
      "code": "DESTOCK",
    }
  }
>
  <Component
    src="test-file-stub"
  >
    <glamorous(img)
      src="test-file-stub"
    >
      <img
        className="css-13azwyo"
        src="test-file-stub"
      />
    </glamorous(img)>
  </Component>
</Component>
`;

exports[`MarketingBadge should render IDEAPIU 1`] = `
<Component
  promotion={
    Object {
      "code": "IDEAPIU",
      "value": 10,
    }
  }
>
  <Component
    src="test-file-stub"
    value={10}
  >
    <glamorous(div)>
      <div
        className="css-13azwyo"
      >
        <glamorous(img)
          height="50px"
          mBottom="18px"
          src="test-file-stub"
          width="100px"
        >
          <img
            className="css-1mc4zot"
            src="test-file-stub"
          />
        </glamorous(img)>
        <glamorous(p)>
          <p
            className="css-178lsms"
          >
            -10% IDEAPIÚ
          </p>
        </glamorous(p)>
      </div>
    </glamorous(div)>
  </Component>
</Component>
`;

exports[`MarketingBadge should render NOVITA 1`] = `
<Component
  promotion={
    Object {
      "code": "NOVITA",
    }
  }
>
  <Icon>
    <glamorous(div)>
      <div
        className="css-1gfp3u5"
      >
        <glamorous(div)>
          <div
            className="css-uslqpr"
          />
        </glamorous(div)>
        <glamorous(span)>
          <span
            className="css-t9b1qp"
          >
            NOVITÀ
          </span>
        </glamorous(span)>
      </div>
    </glamorous(div)>
  </Icon>
</Component>
`;

exports[`MarketingBadge should render PREZZO_GIU 1`] = `
<Component
  promotion={
    Object {
      "code": "PREZZO_GIU",
    }
  }
>
  <Component
    src="test-file-stub"
  >
    <glamorous(img)
      height="100px"
      src="test-file-stub"
      width="100px"
    >
      <img
        className="css-6g4mv0"
        src="test-file-stub"
      />
    </glamorous(img)>
  </Component>
</Component>
`;

exports[`MarketingBadge should render PREZZO_STOCK 1`] = `
<Component
  promotion={
    Object {
      "code": "PREZZO_STOCK",
    }
  }
>
  <Component
    src="test-file-stub"
  >
    <glamorous(img)
      height="20px"
      src="test-file-stub"
      width="120px"
    >
      <img
        className="css-satsm1"
        src="test-file-stub"
      />
    </glamorous(img)>
  </Component>
</Component>
`;

exports[`MarketingBadge should render PREZZO_VINCENTE 1`] = `
<Component
  promotion={
    Object {
      "code": "PREZZO_VINCENTE",
    }
  }
>
  <glamorous(img)
    src="test-file-stub"
  >
    <img
      className="css-13azwyo"
      src="test-file-stub"
    />
  </glamorous(img)>
</Component>
`;

exports[`MarketingBadge should render PROMO_WEB 1`] = `
<Component
  promotion={
    Object {
      "code": "PROMO_WEB",
    }
  }
>
  <Component
    src="test-file-stub"
  >
    <glamorous(img)
      src="test-file-stub"
      width="100px"
    >
      <img
        className="css-1bfg59v"
        src="test-file-stub"
      />
    </glamorous(img)>
  </Component>
</Component>
`;

exports[`MarketingBadge should render null if no promotion is provided 1`] = `
<Component
  promotion={
    Object {
      "code": "",
    }
  }
/>
`;
